# zdsp1d

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmdinterpret.cpp  cmdinterpret.h  cmds.cpp  debugsettings.h  dsp.cpp  dsp.h  dsp1scpi.h  dspsettings.cpp  dspsettings.h  ethsettings.cpp  ethsettings.h  main.cpp  parse.cpp  parse.h  rmconnection.cpp  rmconnection.h  scpi.cpp  scpi.h  xmlsettings.h  zdsp1d.cpp  zdsp1d.h  zdsp1d.pro  zdsp1d.pro.user.2.5pre1  zdsp1d.pro.user.3c59bc7  zdsp1d.user.pri  zdsp1d.xml  zdsp1d.xsd  zdspdprotobufwrapper.cpp  zdspdprotobufwrapper.h  zdspglobal.h  zhserver.cpp  zhserver.h
.github/workflows/: buildAndTest.yml  triggerMetaUpdates.yml
